--- a/src/components/ProductSlider.module.css
+++ b/src/components/ProductSlider.module.css
@@ -1,11 +1,11 @@
 .swiperContainer {
-
-    max-width: 1200px;
+    max-width: 1340px;
     margin: 0 auto;
 }
 
 .grid {
     display: grid;
+    justify-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
     gap: 20px;
@@ -13,10 +13,10 @@
 
 
 :global(.swiper-pagination-progressbar) {
-    background-color: #c15bff;
+    background-color: #b432ff;
 
 }
 
 :global(.swiper-pagination-progressbar .swiper-pagination-progressbar-fill) {
-    background-color: #07363D;
+    background-color: #044a55;
 }
