--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
+@font-face {
+    font-family: 'Nunito';
+    src: url('./assets/fonts/Nunito-Light.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Nunito, sans-serif;
 }
-
-:root {
-    line-height: 1.5;
-    color: rgba(255, 255, 255, 0.87);
-}
-
 
 
 
